create cubes in css

--- a/style.css
+++ b/style.css
@@ -1,16 +1,38 @@
 * {box-sizing: border-box}
 
 body{
-    font-family: optima;
+    font-family:optima;
     background: rgb(129, 9, 93);
     color: rgb(255, 255, 255)
 }
 
 .scene{
-    width: 200px;    
-    height: 200px;
-    margin: 20px;
-    perspective: 600px;;
+    width:200px;    
+    height:200px;
+    margin:20px;
+    perspective:600px;;
 }
+
+.cube{
+    width:200px;
+    height:200px;
+    position:relative;
+    transform-style:preserve-3d;
+    transform:translateZ(-100px);
+    transition:transform 1s;
+}
+
+.cube_face{
+    position:absolute;
+    width:200px;
+    height:200px;
+    border: 2px solid black;
+    line-height:200px;
+    font-size:60px;
+    font-weight:bold;
+    text-align:center
+}
+
+
 
 /* reference: https://icodemag.com/3d-rolling-dice-css-javascript/ */
